swag_update
